<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dossier_cuatro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/registrar">

    <Button
        android:id="@+id/btnSalir"
        android:text="@string/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        tools:background="#2fc8d9"
        android:textColor="#330099"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:id="@+id/btnVerLogros"
        android:text="@string/btnVerLogros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        tools:background="@android:color/holo_blue_light"
        android:textColor="#330099"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/btnVerPerfil"
        android:text="@string/btnVerPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        tools:background="@android:color/holo_blue_light"
        android:textColor="#330099"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btnVerDossiers"
        />

    <Button
        android:id="@+id/btnVerDossiers"
        android:text="@string/btnVerDossiers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        tools:background="#2fc8d9"
        android:textColor="#330099"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btnVerLogros"
        />

    <TextView
        android:id="@+id/lblDossier4"
        android:text="@string/lblDossier4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textColor="#0066CC"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btnSalir"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/btnAct2"
        android:text="@string/btnAct2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        tools:background="#f1bc87"
        android:textColor="#330099"
        android:layout_alignBaseline="@+id/btnAct1"
        android:layout_alignBottom="@+id/btnAct1"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnAct1"
        android:text="@string/btnAct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        tools:background="#f1bc87"
        android:textColor="#330099"
        android:layout_marginTop="88dp"
        android:layout_below="@+id/lblDossier4"
        android:layout_alignStart="@+id/btnAct3" />

    <TextView
        android:id="@+id/lbltxtDossier4"
        android:text="@string/lbltxtDossier4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="17sp"
        android:textColor="#0066CC"
        android:layout_below="@+id/lblDossier4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <Button
        android:id="@+id/btnAtras"
        android:text="@string/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        tools:background="#7be9ff"
        android:textColor="@color/colorPrimaryDark"
        />

    <Button
        android:id="@+id/btnAct3"
        android:text="@string/btnAct3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        tools:background="#f1bc87"
        android:textColor="#330099"
        android:layout_alignTop="@+id/btnAct4"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnAct4"
        android:text="@string/btnAct4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        tools:background="#f1bc87"
        android:textColor="#330099"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/btnAct2"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
