<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ver_dossiers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.laudy.francesa1.app.appfrancesa1.VerDossiers"
    android:background="@drawable/fondo">

    <LinearLayout
        android:id="@+id/linBotonesArriba"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVerLogros"
            android:text="@string/btnVerLogros"
            style="@style/botones_superior" />
        <Button
            android:id="@+id/btnVerDossiers"
            android:text="@string/btnVerDossiers"
            style="@style/botones_superior"
            />
        <Button
            android:id="@+id/btnVerPerfil"
            android:text="@string/btnVerPerfil"
            style="@style/botones_superior"
            />
        <Button
            android:id="@+id/btnSalirDossier"
            android:text="@string/btnSalir"
            style="@style/estilo_salir"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/lblTituloDossiers"
        android:text="@string/lblTituloDossiers"
        style="@style/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/scrBotonesDossier">
        <LinearLayout
            android:id="@+id/linBotonesDossier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>
</LinearLayout>
